RestAPI - database changes
* New model ReaderBookScore for book scores by readers
* Auto-generated ReaderBookScoreController
* Wishlist applied as "skip navigations"
* Migration and database update

--- a/LibraryAPI/LibraryAPI/LibraryAPI.csproj
+++ b/LibraryAPI/LibraryAPI/LibraryAPI.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\ReaderAuthorController.cs" />
+    <Compile Remove="Models\ReaderAuthor.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.16">
       <PrivateAssets>all</PrivateAssets>
