all views added

--- a/LibraryMobile/LibraryMobile.UWP/LibraryMobile.UWP.csproj
+++ b/LibraryMobile/LibraryMobile.UWP/LibraryMobile.UWP.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>LibraryMobile.UWP</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.22621.0</TargetPlatformVersion>
+    <TargetPlatformVersion>10.0.19041.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <EnableDotNetNativeCompatibleProfile>true</EnableDotNetNativeCompatibleProfile>
@@ -93,6 +93,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CustomButtonRenderer.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -104,6 +105,12 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="cat.jpg" />
+    <Content Include="clear.png" />
+    <Content Include="clear_white.png" />
+    <Content Include="heart.png" />
+    <Content Include="heart_fill.png" />
+    <Content Include="heart_remove.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LargeTile.scale-100.png" />
     <Content Include="Assets\LargeTile.scale-200.png" />
@@ -132,6 +139,11 @@
     <Content Include="Assets\Wide310x150Logo.scale-100.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
+    <Content Include="star.png" />
+    <Content Include="heart_white.png" />
+    <Content Include="star_fill.png" />
+    <Content Include="wishlist.png" />
+    <Content Include="wishlist_white.png" />
     <Content Include="xamarin_logo.png" />
     <Content Include="icon_about.png" />
     <Content Include="icon_feed.png" />
